testsuite/tests/parser/should_fail/T12446.stderr

T12446.hs:3:5: error:
    Illegal visible type application ‘@(_ ~ _)’
      Perhaps you intended to use TypeApplications
